Fix payments panel overflow

--- a/budget_app/static/stylesheets/_payments.scss
+++ b/budget_app/static/stylesheets/_payments.scss
@@ -34,6 +34,7 @@
 
     .panel{
       border: none;
+      overflow: visible;
     }
 
     .page-title{
